Active edit-bone isn't updating #66773

Closed
opened 2019-07-12 15:31:20 +02:00 by Campbell Barton · 4 comments

In edit mode selecting the bone doesn't activate it, making it draw brighter (update_armature_edit_mode_pointers needs to run again).

Solutions could include:

  • Depsgraph updating updating edit-mode pointers (ideally without doing a full copy of the armature).
  • Change armature edit data into a struct instead of a ListBase, then we wouldn't need to mange the active edit bone separately.
  • Use the original armature for drawing (is there any need to use the evaluated armature for edit-mode?).

This quick hack works but isn't nice.

diff --git a/source/blender/draw/intern/draw_armature.c b/source/blender/draw/intern/draw_armature.c
index b31ce22ebe9..3d64ea3dae6 100644
--- a/source/blender/draw/intern/draw_armature.c
+++ b/source/blender/draw/intern/draw_armature.c
@@ -1897,6 +1897,8 @@ static void draw_armature_edit(Object *ob)
   const bool show_relations = ((draw_ctx->v3d->flag & V3D_HIDE_HELPLINES) == 0);
 
   const Object *orig_object = DEG_get_original_object(ob);
+  const bArmature *arm_orig = orig_object->data;
+  BLI_assert(arm->edbo == arm_orig->edbo);
 
   for (eBone = arm->edbo->first, index = orig_object->runtime.select_id; eBone;
        eBone = eBone->next, index += 0x10000) {
@@ -1913,7 +1915,7 @@ static void draw_armature_edit(Object *ob)
         }
 
         /* set temporary flag for drawing bone as active, but only if selected */
-        if (eBone == arm->act_edbone) {
+        if (eBone == arm_orig->act_edbone) {
           boneflag |= BONE_DRAW_ACTIVE;
         }
 
In edit mode selecting the bone doesn't activate it, making it draw brighter (`update_armature_edit_mode_pointers` needs to run again). Solutions could include: - Depsgraph updating updating edit-mode pointers (ideally without doing a full copy of the armature). - Change armature edit data into a struct instead of a `ListBase`, then we wouldn't need to mange the active edit bone separately. - Use the original armature for drawing (is there any need to use the evaluated armature for edit-mode?). This quick hack works but isn't nice. ``` diff --git a/source/blender/draw/intern/draw_armature.c b/source/blender/draw/intern/draw_armature.c index b31ce22ebe9..3d64ea3dae6 100644 --- a/source/blender/draw/intern/draw_armature.c +++ b/source/blender/draw/intern/draw_armature.c @@ -1897,6 +1897,8 @@ static void draw_armature_edit(Object *ob) const bool show_relations = ((draw_ctx->v3d->flag & V3D_HIDE_HELPLINES) == 0); const Object *orig_object = DEG_get_original_object(ob); + const bArmature *arm_orig = orig_object->data; + BLI_assert(arm->edbo == arm_orig->edbo); for (eBone = arm->edbo->first, index = orig_object->runtime.select_id; eBone; eBone = eBone->next, index += 0x10000) { @@ -1913,7 +1915,7 @@ static void draw_armature_edit(Object *ob) } /* set temporary flag for drawing bone as active, but only if selected */ - if (eBone == arm->act_edbone) { + if (eBone == arm_orig->act_edbone) { boneflag |= BONE_DRAW_ACTIVE; } ```
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Sergey Sharybin was assigned by Campbell Barton 2019-07-12 15:31:42 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

This issue was referenced by 18310ad509

This issue was referenced by 18310ad5093b33114c62b9e212a4fd1552385f63
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66773
No description provided.