Fix T66773: Active edit-bone isn't updating